modsource-817: add new blocking save records method