@@ -11,6 +11,7 @@ import static org.folio.dao.util.RecordDaoUtil.ensureRecordHasId;
 import static org.folio.dao.util.RecordDaoUtil.ensureRecordHasSuppressDiscovery;
 import static org.folio.dao.util.RecordDaoUtil.filterRecordByExternalHridValuesWithQualifier;
 import static org.folio.dao.util.RecordDaoUtil.filterRecordByState;
+import static org.folio.dao.util.RecordDaoUtil.getExternalIdType;
 import static org.folio.dao.util.RecordDaoUtil.getExternalIdsConditionWithQualifier;
 import static org.folio.dao.util.SnapshotDaoUtil.SNAPSHOT_NOT_FOUND_TEMPLATE;
 import static org.folio.dao.util.SnapshotDaoUtil.SNAPSHOT_NOT_STARTED_MESSAGE_TEMPLATE;
@@ -38,7 +39,9 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.concurrent.ExecutionException;
+import java.util.function.Function;
+import java.util.function.UnaryOperator;
 import javax.ws.rs.BadRequestException;
 import javax.ws.rs.NotFoundException;
 import net.sf.jsqlparser.JSQLParserException;
@@ -170,26 +173,58 @@ public class RecordServiceImpl implements RecordService {
 
   @Override
   public Future<RecordsBatchResponse> saveRecords(RecordCollection recordCollection, Map<String, String> okapiHeaders) {
-    return saveRecordsBlocking(recordCollection, false, okapiHeaders);
-  }
-
-  @Override
-  public Future<RecordsBatchResponse> saveRecordsBlocking(RecordCollection recordCollection,
-                                                          boolean orderedBlocking,
-                                                          Map<String, String> okapiHeaders) {
     if (recordCollection.getRecords().isEmpty()) {
       Promise<RecordsBatchResponse> promise = Promise.promise();
       promise.complete(new RecordsBatchResponse().withTotalRecords(0));
       return promise.future();
     }
     List<Future> setMatchedIdsFutures = new ArrayList<>();
-    recordCollection.getRecords().forEach(record -> setMatchedIdsFutures.add(setMatchedIdForRecord(record,
-      okapiHeaders.get(OKAPI_TENANT_HEADER))));
+    recordCollection.getRecords().forEach(sourceRecord ->
+      setMatchedIdsFutures.add(setMatchedIdForRecord(sourceRecord, okapiHeaders.get(OKAPI_TENANT_HEADER))));
     return GenericCompositeFuture.all(setMatchedIdsFutures)
       .compose(ar -> ar.succeeded() ?
-        recordDao.saveRecordsBlocking(recordCollection, orderedBlocking, okapiHeaders)
-        : Future.failedFuture(ar.cause()))
+        recordDao.saveRecords(recordCollection, okapiHeaders) : Future.failedFuture(ar.cause()))
       .recover(RecordServiceImpl::mapToDuplicateExceptionIfNeeded);
+  }
+
+  @Override
+  public Future<RecordsBatchResponse> saveRecordsBlocking(List<String> instanceIds,
+                                                          RecordType recordType,
+                                                          UnaryOperator<RecordCollection> recordsModifier,
+                                                          Map<String, String> okapiHeaders) {
+    var condition = RecordDaoUtil.getExternalIdsCondition(instanceIds,
+        getExternalIdType(Record.RecordType.fromValue(recordType.name())))
+      .and(RecordDaoUtil.filterRecordByDeleted(false));
+
+    Function<RecordCollection, Optional<RecordCollection>> recordsModifierWithMatchedIdsSetter =
+      recordsModifier.andThen(recordCollection -> {
+        try {
+          for (var sourceRecord : recordCollection.getRecords()) {
+            setMatchedIdForRecord(sourceRecord, okapiHeaders.get(OKAPI_TENANT_HEADER))
+              .toCompletionStage().toCompletableFuture().get();
+          }
+          return Optional.of(recordCollection);
+        } catch (InterruptedException | ExecutionException ex) {
+          LOG.warn("saveRecordsBlocking:: Failed to set record matched id: {}", ex.getMessage());
+          return Optional.empty();
+        }
+      });
+
+    return recordDao.saveRecordsBlocking(condition, recordType, 0, instanceIds.size(), recordsModifierWithMatchedIdsSetter, okapiHeaders);
+
+//    if (recordCollection.getRecords().isEmpty()) {
+//      Promise<RecordsBatchResponse> promise = Promise.promise();
+//      promise.complete(new RecordsBatchResponse().withTotalRecords(0));
+//      return promise.future();
+//    }
+//    List<Future> setMatchedIdsFutures = new ArrayList<>();
+//    recordCollection.getRecords().forEach(record -> setMatchedIdsFutures.add(setMatchedIdForRecord(record,
+//      okapiHeaders.get(OKAPI_TENANT_HEADER))));
+//    return GenericCompositeFuture.all(setMatchedIdsFutures)
+//      .compose(ar -> ar.succeeded() ?
+//        recordDao.saveRecordsBlocking(recordCollection, orderedBlocking, okapiHeaders)
+//        : Future.failedFuture(ar.cause()))
+//      .recover(RecordServiceImpl::mapToDuplicateExceptionIfNeeded);
   }
 
   @Override
@@ -387,7 +422,7 @@ public class RecordServiceImpl implements RecordService {
     }
     Promise<Record> promise = Promise.promise();
     String externalId = RecordDaoUtil.getExternalId(record.getExternalIdsHolder(), record.getRecordType());
-    IdType idType = RecordDaoUtil.getExternalIdType(record.getRecordType());
+    IdType idType = getExternalIdType(record.getRecordType());
 
     if (externalId != null && idType != null && record.getState() == Record.State.ACTUAL) {
       setMatchedIdFromExistingSourceRecord(record, tenantId, promise, externalId, idType);
@@ -459,7 +494,7 @@ public class RecordServiceImpl implements RecordService {
             .map(JsonObject.class::cast)
             .filter(field -> checkFieldRange(field, data))
             .map(JsonObject::getMap)
-            .collect(Collectors.toList());
+            .toList();
 
           parsedContent.put("fields", filteredFields);
           recordToFilter.getParsedRecord().setContent(parsedContent.getMap());
